--- a/m/busi/mchnt-param.html
+++ b/m/busi/mchnt-param.html
@@ -122,7 +122,7 @@
                         <label class="weui-label">银行账号<span class="required">*</span></label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input" type="text" name="account_no" required="" placeholder="请输入银行账号">
+                        <input class="weui-input" type="text" name="account_no" required="" placeholder="请输入银行账号" style="font-weight:bold; font-size:20px; color: red;">
                     </div>
                 </div>
                 <div class="weui-cell weui-cell_select weui-cell_select-after hide">
@@ -307,7 +307,7 @@
                 </div>
                 <div class="weui-form-preview__item">
                     <label class="weui-form-preview__label">银行账号</label>
-                    <span class="weui-form-preview__value" id="preview-account_no"></span>
+                    <span class="weui-form-preview__value" id="preview-account_no" style="font-weight:bold; font-size:20px; color: red;"></span>
                 </div>
                 <div class="weui-form-preview__item hide">
                     <label class="weui-form-preview__label">信用卡开关</label>
