--- a/m/busi/steps/select-busi.html
+++ b/m/busi/steps/select-busi.html
@@ -13,9 +13,9 @@
 <body>
     <div id="page1" class="page">
         <div class="weui-cells__title">选择业务类型</div>
-        <div class="weui-search-bar hide">
-            <!-- <a href="javascript:" class="search-bar__btn" onclick="weui.page.back()">返回</a> -->
-            <form class="weui-search-bar__form" method="post" action="">
+        <div class="weui-search-bar">
+            <a href="javascript:" class="search-bar__btn" onclick="back()">返回</a>
+            <form class="weui-search-bar__form hide" method="post" action="">
                 <div class="weui-search-bar__box">
                     <i class="weui-icon-search"></i>
                     <input type="search" class="weui-search-bar__input" name="search" placeholder="搜索">
@@ -25,7 +25,7 @@
                     <i class="weui-icon-search"></i>
                     <span>搜索</span> </label>
             </form>
-            <a href="javascript:" class="weui-search-bar__cancel-btn">取消</a>
+            <a href="javascript:" class="weui-search-bar__cancel-btn hide">取消</a>
         </div>
         <div class="weui-cells searchbar-result">
             <!-- <div class="weui-cell weui-cell_access">
@@ -39,7 +39,7 @@
     <div id="page2" class="page page_show">
         <div class="weui-search-bar">
             <a href="javascript:" class="search-bar__btn" onclick="back()">返回</a>
-            <form class="weui-search-bar__form" method="post" action="">
+            <form class="weui-search-bar__form hide" method="post" action="">
                 <div class="weui-search-bar__box">
                     <i class="weui-icon-search"></i>
                     <input type="search" class="weui-search-bar__input" name="search" placeholder="搜索收单机构">
@@ -49,7 +49,7 @@
                     <i class="weui-icon-search"></i>
                     <span>收单机构</span> </label>
             </form>
-            <a href="javascript:" class="weui-search-bar__cancel-btn">取消</a>
+            <a href="javascript:" class="weui-search-bar__cancel-btn hide">取消</a>
         </div>
         <div class="weui-cells searchbar-result">
             <!-- <div class="weui-cell weui-cell_access">
