--- a/m/busi/steps/select-busi.html
+++ b/m/busi/steps/select-busi.html
@@ -12,18 +12,17 @@
 
 <body>
     <div id="page1" class="page">
-        <div class="weui-cells__title">选择业务类型</div>
         <div class="weui-search-bar">
             <a href="javascript:" class="search-bar__btn" onclick="back()">返回</a>
-            <form class="weui-search-bar__form hide" method="post" action="">
+            <form class="weui-search-bar__form" method="post" action="">
                 <div class="weui-search-bar__box">
                     <i class="weui-icon-search"></i>
-                    <input type="search" class="weui-search-bar__input" name="search" placeholder="搜索">
+                    <input type="search" class="weui-search-bar__input" name="search" placeholder="" readonly>
                     <a href="javascript:" class="weui-icon-clear"></a>
                 </div>
                 <label class="weui-search-bar__label">
-                    <i class="weui-icon-search"></i>
-                    <span>搜索</span> </label>
+                    <!--i class="weui-icon-search"></i-->
+                    <span>业务类型</span> </label>
             </form>
             <a href="javascript:" class="weui-search-bar__cancel-btn hide">取消</a>
         </div>
@@ -39,14 +38,14 @@
     <div id="page2" class="page page_show">
         <div class="weui-search-bar">
             <a href="javascript:" class="search-bar__btn" onclick="back()">返回</a>
-            <form class="weui-search-bar__form hide" method="post" action="">
+            <form class="weui-search-bar__form" method="post" action="">
                 <div class="weui-search-bar__box">
                     <i class="weui-icon-search"></i>
-                    <input type="search" class="weui-search-bar__input" name="search" placeholder="搜索收单机构">
+                    <input type="search" class="weui-search-bar__input" name="search" placeholder="" readonly>
                     <a href="javascript:" class="weui-icon-clear"></a>
                 </div>
                 <label class="weui-search-bar__label">
-                    <i class="weui-icon-search"></i>
+                    <!--i class="weui-icon-search"></i-->
                     <span>收单机构</span> </label>
             </form>
             <a href="javascript:" class="weui-search-bar__cancel-btn hide">取消</a>
