--- a/m/busi/steps/mchnt.html
+++ b/m/busi/steps/mchnt.html
@@ -132,14 +132,14 @@
     <div id="page2" class="page page_show">
         <div class="weui-search-bar">
             <a href="javascript:" class="search-bar__btn" onclick="prev()">返回</a>
-            <form class="weui-search-bar__form hide" method="post" action="">
+            <form class="weui-search-bar__form" method="post" action="">
                 <div class="weui-search-bar__box">
                     <i class="weui-icon-search"></i>
-                    <input type="search" class="weui-search-bar__input" name="search" placeholder="搜索收单机构">
+                    <input type="search" class="weui-search-bar__input" name="search" placeholder="搜索收单机构" readonly>
                     <a href="javascript:" class="weui-icon-clear"></a>
                 </div>
                 <label class="weui-search-bar__label">
-                    <i class="weui-icon-search"></i>
+                    <!--i class="weui-icon-search"></i-->
                     <span>入网类型</span> </label>
             </form>
             <a href="javascript:" class="weui-search-bar__cancel-btn hide">取消</a>
