--- a/m/busi/steps/account.html
+++ b/m/busi/steps/account.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+   <div class="page page_show">
     <form id="form">
         <!-- 填写结算信息开始 -->
         <div class="weui-cells__title">结算账户</div>
@@ -44,7 +45,13 @@
                     </div>
                 </div>
             </div>
-            <div class="weui-cell">
+            <div class="weui-cell weui-cell_switch">
+                <div class="weui-cell__bd">非法人入账资料补充</div>
+                <div class="weui-cell__ft">
+                    <input class="weui-switch" type="checkbox" id="s1"/>
+                </div>
+            </div>
+            <div class="weui-cell hide ffrrz">
                 <div class="weui-cell__bd">
                     <div class="weui-uploader recognize" data-type="sfzzm">
                         <div class="weui-uploader__hd">
@@ -62,7 +69,7 @@
                     </div>
                 </div>
             </div>
-            <div class="weui-cell">
+            <div class="weui-cell hide ffrrz">
                 <div class="weui-cell__bd">
                     <div class="weui-uploader" data-type="sfzfm">
                         <div class="weui-uploader__hd">
@@ -80,7 +87,7 @@
                     </div>
                 </div>
             </div>
-            <div class="weui-cell">
+            <div class="weui-cell hide ffrrz">
                 <div class="weui-cell__bd">
                     <div class="weui-uploader" data-type="rzsqs">
                         <div class="weui-uploader__hd">
@@ -146,6 +153,7 @@
             <a id="submit-btn" href="javascript:" class="weui-btn weui-btn_primary">提交</a>
         </div>
     </form>
+  </div>
     <!-- <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=mUs8UNiHRImGLNueae1Gd9PVdejrYdHC"></script> -->
     <script type="text/javascript" src="../../js/lib/zepto.min.js"></script>
     <script type="text/javascript" src="../../js/lib/weuijs/weuijs.min.js"></script>
@@ -350,7 +358,13 @@
         $('#form').find('.weui-uploader').each(function() {
             initUploader(this, $(this).attr('data-type'));
         });
-
+		$('#s1').on('change', function() {
+			if ($(this).prop('checked')) {
+				$('div.ffrrz').removeClass('hide');
+			} else {
+				$('div.ffrrz').addClass('hide');
+			}
+		});
         $('#account-bank-branch-select2').on('focus', function() {
             $$.showSelect2(this, {
                 title: '搜索开户支行',
