--- a/m/busi/steps/account.html
+++ b/m/busi/steps/account.html
@@ -46,7 +46,7 @@
                 </div>
             </div>
             <div class="weui-cell weui-cell_switch">
-                <div class="weui-cell__bd">非法人入账资料补充</div>
+                <div class="weui-cell__bd" style="color: gray">非法人入账资料补充</div>
                 <div class="weui-cell__ft">
                     <input class="weui-switch" type="checkbox" id="s1"/>
                 </div>
