--- a/m/busi/mchnt-base-info.html
+++ b/m/busi/mchnt-base-info.html
@@ -138,7 +138,7 @@
                         <label class="weui-label">营业执照期限</label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input" type="text" name="license_date" placeholder="请选择营业执照期限"  id="license-date-picker" readonly>
+                        <input class="weui-input" type="text" name="license_date" placeholder="请选择营业执照期限"  id="license-date-picker" style="ime-mode:disabled">
                     </div>
                 </div>
                 <div class="weui-cell">
@@ -188,7 +188,7 @@
                         <label class="weui-label">证件有效期</label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input" type="text" name="cert_date" placeholder="请输入证件有效期" id="cert-date-picker" readonly>
+                        <input class="weui-input" type="text" name="cert_date" placeholder="请输入证件有效期" id="cert-date-picker" style="ime-mode:disabled">
                     </div>
                 </div>
                 <div class="weui-cell">
