--- a/m/busi/steps/base.html
+++ b/m/busi/steps/base.html
@@ -28,7 +28,7 @@
                         <label class="weui-label">手机号<span class="required">*</span></label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input" type="text" name="mobile" required="" placeholder="请输入手机号" validType="mobile" invalidTips="请输入有效的手机号">
+                        <input class="weui-input" type="number" name="mobile" required="" placeholder="请输入手机号" validType="mobile" invalidTips="请输入有效的手机号">
                     </div>
                 </div>
                 <div class="weui-cell">
