--- a/m/busi/steps/mchnt.html
+++ b/m/busi/steps/mchnt.html
@@ -119,7 +119,7 @@
                         <label class="weui-label">证件有效期</label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input" type="text" name="cert_date" placeholder="请输入证件有效期" id="cert-date-picker" style="ime-mode:disabled">
+                        <input class="weui-input" type="text" name="cert_date" placeholder="请输入证件有效期" id="cert-date-picker" readonly>
                     </div>
                 </div>
             </div>
