--- a/m/index.html
+++ b/m/index.html
@@ -74,7 +74,7 @@
                 <i class="icon-friend"></i>
                 <p class="weui-tabbar__label">通讯录</p>
             </a-->
-            <a href="javascript:;" class="weui-tabbar__item">
+            <a href="tab-workorder.html" class="weui-tabbar__item">
                 <!-- <img src="images/icon_nav_button.png" alt="" class="weui-tabbar__icon"> -->
                 <i class="icon-list"></i>
                 <p class="weui-tabbar__label">工作台</p>
