--- a/m/tab-workorder.html
+++ b/m/tab-workorder.html
@@ -6,9 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>工作台</title>
-    <link rel="stylesheet" href="../lib/weui/style/weui.min.css">
-    <link rel="stylesheet" href="../lib/weuijs/style/weuijs.css">
-    <link rel="stylesheet" href="../css/ui-base.css">
+    <link rel="stylesheet" href="js/lib/weuijs/style/weuijs.min.css">
+    <link rel="stylesheet" href="css/ui-base.css">
 </head>
 
 <body>
