--- a/m/work/term-busi-list.html
+++ b/m/work/term-busi-list.html
@@ -71,7 +71,7 @@
 					if (data.errcode == 0) {
 						success(data.term);
 					} else {
-						weui.alert(data.errmsg, error, {
+						weui.alert(data.errmsg, {
 							title: '提示'
 						});
 					}
