--- a/m/work/workorder.html
+++ b/m/work/workorder.html
@@ -272,7 +272,7 @@
                 <div class="weui-cell">
                     <div class="weui-cell__bd">是否完成任务<span class="required">*</span></div>
                     <div class="weui-cell__ft">
-                        <input class="weui-switch validate" type="checkbox" name="work_result" value="1" checked="checked" required="required" title="是否完成任务">
+                        <input class="weui-switch" type="checkbox" name="work_result" value="1" checked="checked" required="required" title="是否完成任务">
                     </div>
                 </div>
                 <div class="weui-cell">
@@ -444,7 +444,7 @@
 					if (data.errcode == 0) {
 						weui.page.back();
 					} else {
-						weui.alert(data.errmsg, error, {
+						weui.alert(data.errmsg, {
 							title: '提示'
 						});
 					}
@@ -467,7 +467,7 @@
 					if (data.errcode == 0) {
 						loadDetailForm(form, data);
 					} else {
-						weui.alert(data.errmsg, error, {
+						weui.alert(data.errmsg, {
 							title: '提示'
 						});
 					}
