--- a/m/work/workorder.html
+++ b/m/work/workorder.html
@@ -133,7 +133,7 @@
                 <div class="weui-cell">
                     <div class="weui-cell__bd">是否完成任务</div>
                     <div class="weui-cell__ft">
-                        <input class="weui-switch" type="checkbox" name="work_result" value="1" disabled>
+                        <input class="weui-switch" type="checkbox" name="work_result" disabled>
                     </div>
                 </div>
                 <div class="weui-cell">
@@ -272,7 +272,7 @@
                 <div class="weui-cell">
                     <div class="weui-cell__bd">是否完成任务<span class="required">*</span></div>
                     <div class="weui-cell__ft">
-                        <input class="weui-switch" type="checkbox" name="work_result" value="1" checked="checked" required="required" title="是否完成任务">
+                        <input class="weui-switch" type="checkbox" name="work_result" checked="checked" required="required" title="是否完成任务">
                     </div>
                 </div>
                 <div class="weui-cell">
